--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "arpping",
-  "version": "2.0.0",
+  "name": "@mflocal/arpping",
+  "version": "2.1.0",
   "description": "Discover and search for internet-connected devices (locally) using ping and arp",
   "main": "index.js",
   "dependencies": {
